@@ -5,10 +5,10 @@ HEIGHT=16
 FONTFILE="8x16graph.bdf"
 
 (
-  echo -e "// newfont.h\n"
+  echo -e "// newfont.h\\n"
   echo -e "#ifndef FNEWFONT_H"
-  echo -e "#define FNEWFONT_H\n"
-  echo -e "\nstatic unsigned char __8x16graph[] =\n{"
+  echo -e "#define FNEWFONT_H\\n"
+  echo -e "\\nstatic unsigned char __8x16graph[] =\\n{"
 
   grep -A${HEIGHT} ^BITMAP "$FONTFILE" \
   | tr '\n' ',' \
@@ -26,6 +26,6 @@ FONTFILE="8x16graph.bdf"
   done
 
   echo -e "};"
-  echo -e "\n#endif  // FNEWFONT_H"
+  echo -e "\\n#endif  // FNEWFONT_H"
 ) > newfont.h
 
