@@ -5,9 +5,9 @@ HEIGHT=16
 FONTFILE="8x16std"
 
 (
-  echo -e "// vgafont.h\n"
+  echo -e "// vgafont.h\\n"
   echo -e "#ifndef FVGAFONT_H"
-  echo -e "#define FVGAFONT_H\n"
+  echo -e "#define FVGAFONT_H\\n"
 
   xxd -g 1 -i -c $HEIGHT $FONTFILE \
   | sed -e 's/ {$/\n{/' \
@@ -24,5 +24,5 @@ FONTFILE="8x16std"
     fi
   done
 
-  echo -e "\n#endif  // FVGAFONT_H"
+  echo -e "\\n#endif  // FVGAFONT_H"
 ) > vgafont.h
