@@ -34,91 +34,91 @@ int main (int, char**)
   std::cout << "  instream >> " << in << std::endl;
 
   // Test: output stream (operator <<)
-  FString out = L"A test string for 0 \x20ac";
+  const FString& out = L"A test string for 0 \x20ac";
   std::cout << " outstream << " << out << std::endl;
 
   // Test: c-string output
   printf ("     c_str:  \"%s\"\n", out.c_str());
 
   // Test: copy a c++ string
-  FString cpp_str( std::string("c++ String") );
+  const FString& cpp_str( std::string("c++ String") );
   std::cout << "   cpp_str: \"" << cpp_str << "\"" << std::endl;
 
   // Test: copy a character
-  FString ch('c');
+  const FString& ch('c');
   std::cout << "      char: '" << ch << "'" << std::endl;
 
   // Test: copy a wide character
-  FString wch(L'w');
+  const FString& wch(L'w');
   std::cout << "   wchar_t: '" << wch << "'" << std::endl;
 
   // Test: utf-8 string
-  FString len = "длина́";
+  const FString& len = "длина́";
   std::cout << "    length: \"" << len << "\" has "
             << len.getLength() << " characters" << std::endl;
 
   // Test: convert uppercase letter to lowercase
-  FString lower = FString(L"InPut").toLower();
+  const FString& lower = FString(L"InPut").toLower();
   std::wcout << L"   toLower: " << lower << std::endl;
 
   // Test: convert lowercase letter to uppercase
-  FString upper = FString("inPut").toUpper();
+  const FString& upper = FString("inPut").toUpper();
   std::cout << "   toUpper: " << upper << std::endl;
 
   // Test: concatenate two FStrings (operator +)
-  FString add1 = FString("FString + ") + FString("FString");
+  const FString& add1 = FString("FString + ") + FString("FString");
   std::cout << "       add: " << add1 << std::endl;
 
   // Test: concatenate a FString and a c++ wide string (operator +)
-  FString add2 = FString("FString + ") + std::wstring(L"std::wstring");
+  const FString& add2 = FString("FString + ") + std::wstring(L"std::wstring");
   std::cout << "       add: " << add2 << std::endl;
 
   // Test: concatenate a FString and a wide string (operator +)
-  FString add3 = FString("FString + ") + const_cast<wchar_t*>(L"wchar_t*");
+  const FString& add3 = FString("FString + ") + const_cast<wchar_t*>(L"wchar_t*");
   std::cout << "       add: " << add3 << std::endl;
 
   // Test: concatenate a FString and a c++ string (operator +)
-  FString add4 = FString("FString + ") + std::string("std::string");
+  const FString& add4 = FString("FString + ") + std::string("std::string");
   std::cout << "       add: " << add4 << std::endl;
 
   // Test: concatenate a FString and a c-string (operator +)
-  FString add5 = FString("FString + ") + const_cast<char*>("char*");
+  const FString& add5 = FString("FString + ") + const_cast<char*>("char*");
   std::cout << "       add: " << add5 << std::endl;
 
   // Test: concatenate a FString and a wide character (operator +)
-  FString add6 = FString("FString + ") + wchar_t(L'w');
+  const FString& add6 = FString("FString + ") + wchar_t(L'w');
   std::cout << "       add: " << add6 << std::endl;
 
   // Test: concatenate a FString and a character (operator +)
-  FString add7 = FString("FString + ") + char('c');
+  const FString& add7 = FString("FString + ") + char('c');
   std::cout << "       add: " << add7 << std::endl;
 
   // Test: concatenate a character and a FString (operator +)
-  FString add8 = 'c' + FString(" + FString");
+  const FString& add8 = 'c' + FString(" + FString");
   std::cout << "       add: " << add8 << std::endl;
 
   // Test: concatenate a wide character and a FString (operator +)
-  FString add9 = L'w' + FString(" + FString");
+  const FString& add9 = L'w' + FString(" + FString");
   std::cout << "       add: " << add9 << std::endl;
 
   // Test: concatenate a c-string and a FString (operator +)
-  FString add10 = const_cast<char*>("char*") + FString(" + FString");
+  const FString& add10 = const_cast<char*>("char*") + FString(" + FString");
   std::cout << "       add: " << add10 << std::endl;
 
   // Test: concatenate a c++ string and a FString (operator +)
-  FString add11 = std::string("std::string") + FString(" + FString");
+  const FString& add11 = std::string("std::string") + FString(" + FString");
   std::cout << "       add: " << add11 << std::endl;
 
   // Test: concatenate a wide string and a FString (operator +)
-  FString add12 = const_cast<wchar_t*>(L"wchar_t*") + FString(" + FString");
+  const FString& add12 = const_cast<wchar_t*>(L"wchar_t*") + FString(" + FString");
   std::cout << "       add: " << add12 << std::endl;
 
   // Test: concatenate a c++ wide string and a FString (operator +)
-  FString add13 = std::wstring(L"std::wstring") + FString(" + FString");
+  const FString& add13 = std::wstring(L"std::wstring") + FString(" + FString");
   std::cout << "       add: " << add13 << std::endl;
 
   // Test: compare operators ==, <=, <, >=, >, !=
-  FString cmp = "compare";
+  const FString& cmp = "compare";
 
   if ( cmp == FString("compare") )
     std::cout << "       cmp: == Ok" << std::endl;
@@ -172,7 +172,7 @@ int main (int, char**)
   // Test: convert a string to a unsigned long interger
   try
   {
-    uLong ulong_num = FString("123456789").toULong();
+    const uLong ulong_num = FString("123456789").toULong();
     std::cout << "   toULong:  " << ulong_num << std::endl;
   }
   catch (const std::invalid_argument& ex)
@@ -187,7 +187,7 @@ int main (int, char**)
   // Test: convert a string to a signed long interger
   try
   {
-    long long_num = FString("-9876543210").toLong();
+    const long long_num = FString("-9876543210").toLong();
     std::cout << "    toLong:  " << long_num << std::endl;
   }
   catch (const std::invalid_argument& ex)
@@ -204,7 +204,7 @@ int main (int, char**)
 
   try
   {
-    double double_num = FString("2.7182818284590452353").toDouble();
+    const double double_num = FString("2.7182818284590452353").toDouble();
     std::ios_base::fmtflags save_flags = std::cout.flags();
     std::cout << "  toDouble:  " << std::setprecision(11)
                                  << double_num << std::endl;
@@ -249,7 +249,7 @@ int main (int, char**)
             << fnum2 << " (signed)"   << std::endl;
 
   // Test: remove whitespace from the end of a string
-  FString trim_str = "  A string \t";
+  const FString& trim_str = "  A string \t";
   std::wcout << "    rtrim: \""
              << trim_str.rtrim() << "\"" << std::endl;
 
@@ -262,7 +262,7 @@ int main (int, char**)
             << trim_str.trim()  << "\"" << std::endl;
 
   // Test: 11 characters from the left of the string
-  FString alphabet = "a b c d e f g h i j k l m n o p q r s t u v w x y z";
+  const FString& alphabet = "a b c d e f g h i j k l m n o p q r s t u v w x y z";
   std::cout << "     left: \""
             << alphabet.left(11)   << "\"" << std::endl;
 
@@ -304,7 +304,7 @@ int main (int, char**)
   }
 
   // Test: character access with std::iterator
-  FString stringIterator = "iterator";
+  const FString& stringIterator = "iterator";
   FString::iterator iter;
   iter = stringIterator.begin();
   std::cout << " " << stringIterator << ": ";
@@ -353,22 +353,22 @@ int main (int, char**)
 
   // Test: find and replace a substring
   FString source_str = "computer and software";
-  FString replace_str = source_str.replace("computer", "hard-");
+  const FString& replace_str = source_str.replace("computer", "hard-");
   std::cout << "  replace: "
             << replace_str << std::endl;
 
   // Test: convert tabs to spaces
-  FString tab_str = "1234\t5678";
+  const FString& tab_str = "1234\t5678";
   std::cout << "      tab: "
             << tab_str.expandTabs() << std::endl;
 
   // Test: backspaces remove characters in the string
-  FString bs_str = "t\b\bTesT\bt";
+  const FString& bs_str = "t\b\bTesT\bt";
   std::cout << "backspace: "
             << bs_str.removeBackspaces() << std::endl;
 
   // Test: delete characters remove characters in the string
-  FString del_str = "apple \177\177\177pietree";
+  const FString& del_str = "apple \177\177\177pietree";
   std::cout << "   delete: "
             << del_str.removeDel() << std::endl;
 }
